Make mode explicit.

--- a/index.src.html
+++ b/index.src.html
@@ -1536,6 +1536,8 @@ spec: SHA2; urlPrefix: http://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf
               ::  ""
               :   <a for="request">cache mode</a>
               ::  "`no-cache`"
+              :   <a for="request">mode</a>
+              ::  "`no-cors`"
               :   <a for="request">credentials mode</a>
               ::  "`same-origin`"
               :   <a for="request">header list</a>
